DT-2530: Add an ontology index feature to Consent (#2783)